--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "yiisoft/yii2": "~2.0.45",
         "yiisoft/yii2-bootstrap5": "~2.0.2",
         "yiisoft/yii2-symfonymailer": "~2.0.3",
-        "kartik-v/yii2-mpdf": "^1.0"
+        "kartik-v/yii2-mpdf": "^1.0",
+        "webvimark/module-user-management": "^1.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
