--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,13 @@
         "yiisoft/yii2-bootstrap5": "~2.0.2",
         "yiisoft/yii2-symfonymailer": "~2.0.3",
         "kartik-v/yii2-mpdf": "^1.0",
-        "webvimark/module-user-management": "^1.0"
+        "webvimark/module-user-management": "^1.0",
+        "kartik-v/yii2-krajee-base": ">=3.0.5",
+        "kartik-v/bootstrap-fileinput": ">=5.5.0",
+        "kartik-v/yii2-widget-fileinput": "dev-master",
+        "kartik-v/yii2-widget-typeahead": "dev-master",
+        "kartik-v/yii2-widget-switchinput": "dev-master",
+        "kartik-v/yii2-widget-select2": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
@@ -66,6 +72,9 @@
             "generateCookieValidationKey": [
                 "config/web.php"
             ]
+        },
+        "branch-alias": {                   
+            "dev-master": "1.1.x-dev"
         }
     },
     "repositories": [
